--- a/src/app/pages/main-page/main-page.html
+++ b/src/app/pages/main-page/main-page.html
@@ -1,1 +1,5 @@
-<p>main-page works!</p>
+<app-text size="xl">Hello</app-text>
+<app-text size="xl" color="secondary">Hello</app-text>
+<app-text size="xl" color="error">Hello</app-text>
+<app-text size="xl" color="warning">Hello</app-text>
+
