--- a/src/app/components/ui/text/text.scss
+++ b/src/app/components/ui/text/text.scss
@@ -18,22 +18,34 @@
     font-size: 16px;
 }
 
-
 .primary{
-    color: #4169E1
+    color: var(--PrimaryColor);
 }
 
 .secondary{
-    color: #808080
+    color: var(--SecondColor);
 
 }
 
 .warning{
 
-    color: #FFA500
+    color: var(--WarnColor);
 }
 
 .error{
-    color: #B22222
+    color: var(--ErrColor);
 }
 
+.bold {
+    font-weight: 700;
+}
+.semibold{
+    font-weight: 600;
+}
+
+.regular{
+    font-weight: 400;
+}
+.light {
+    font-weight: 300;
+}
