Сделал Sidebar строго не судить!

--- a/src/app/pages/main-page/main-page.html
+++ b/src/app/pages/main-page/main-page.html
@@ -3,7 +3,7 @@
 <div class="card">
     <app-text size="l" weight="bold" color="primary">Тема: Земля</app-text>
   <div class="flex ">
-        <app-text size="m" weight="bold" color="secondary" ></app-text>
+    <app-text size="m" weight="bold" color="secondary"> fdgfdgfd</app-text>
   </div>
 </div>
 
