--- a/src/app/components/ui/sidebar/sidebar.html
+++ b/src/app/components/ui/sidebar/sidebar.html
@@ -1,7 +1,9 @@
 <app-text size="s" weight="bold" color="secondary">
     <div class="sidebar">
         <div class="sidebar__logo">
-            <img class="sidebar__logo-img" src="" alt="///">
+            <img class="sidebar__logo-img" 
+                src="/assets/images/istockphoto-499680387-612x612.png" 
+                alt="Ошибка">
         </div>
         <ul class="sidebar__ul-lists">
             @for (menuItem of menuItems; track menuItem.icon) {
