--- a/src/app/components/ui/button/button.scss
+++ b/src/app/components/ui/button/button.scss
@@ -2,6 +2,14 @@
     background: var(--BtnPrimaryBg);
 }
 .big{
-    width: 100px;
-    height: 100px;
+    border-radius: 5px;
+    width: 200px;
+    height: 40px;
+    border: none;
+    background: var(--BtnPrimaryBg);
+    cursor: pointer;
+    &:hover,
+    :focus-visible{
+        background: var(--secondary);
+    }
 }
