--- a/src/app/components/ui/sidebar/sidebar.scss
+++ b/src/app/components/ui/sidebar/sidebar.scss
@@ -2,6 +2,10 @@
     background: var(--BgSecondary);
     height: 100dvh;
     padding: 8px;
+    &__logo-img{
+        width: 200px;
+        height: 150px;
+    }
     &__ul-lists{
         display: grid;
     }
