--- a/src/app/pages/main-page/main-page.scss
+++ b/src/app/pages/main-page/main-page.scss
@@ -1,14 +1,7 @@
 .card{
     width: 300px;
     height: 400px;
-    background-color: var(--BgSecondary);
+    background-color: var(--BgColor);
     display: block;
     padding: 5px;
-}
-
-.flex{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 10px;
 }
