--- a/src/app/components/ui/sidebar/sidebar.html
+++ b/src/app/components/ui/sidebar/sidebar.html
@@ -1,22 +1,25 @@
-<app-text size="s" weight="bold" color="secondary">
-    <div class="sidebar">
-        <div class="sidebar__logo">
-            <img class="sidebar__logo-img" 
-                src="/assets/images/istockphoto-499680387-612x612.png" 
-                alt="Ошибка">
-        </div>
-        <ul class="sidebar__ul-lists">
-            @for (menuItem of menuItems; track menuItem.icon) {
-                <li class="sidebar__list">
+<div class="sidebar">
+    <div class="sidebar__logo">
+        <img class="sidebar__logo-img" 
+            src="/assets/images/istockphoto-499680387-612x612.png" 
+            alt="logo image">
+    </div>
+    <ul class="sidebar__list">
+        @for (menuItem of menuItems; track menuItem.link) {
+            <li class="sidebar__list-item">
+                <app-text size="s" 
+                    weight="bold" 
+                    color="secondary" 
+                    visiblePrimary="visiblePrimary">
                     <a class="sidebar__link"
                         [routerLink]="[menuItem.link]">
                         <svg class="sidebar__icon"
                             [icon]="menuItem.icon">
                         </svg>
-                        <span>{{menuItem.label}}</span>
+                            {{menuItem.label}}
                     </a>
-                </li>
-            }
-        </ul>
-    </div>
-</app-text>
+                </app-text>
+            </li>
+        }
+    </ul>
+</div>
