--- a/src/app/components/ui/sidebar/sidebar.scss
+++ b/src/app/components/ui/sidebar/sidebar.scss
@@ -6,10 +6,7 @@
         width: 200px;
         height: 150px;
     }
-    &__ul-lists{
-        display: grid;
-    }
-    &__list{
+    &__list-item{
         padding: 15px;
     }
     &__link{
