--- a/src/app/pages/main-page/main-page.html
+++ b/src/app/pages/main-page/main-page.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <app-button btnClick="primary">
+  <app-button variant="primary">
     <app-text size="m" weight="bold" color="secondary">Добавить</app-text>
   </app-button>
 </div>
