--- a/src/app/components/ui/layout/layout.html
+++ b/src/app/components/ui/layout/layout.html
@@ -1,5 +1,7 @@
-<app-sidebar></app-sidebar>
+<div class="sidebar">
+    <app-sidebar></app-sidebar>
 
-<div class="content">
-    <router-outlet></router-outlet>
+    <div class="pages">
+        <router-outlet></router-outlet>
+    </div>
 </div>
