--- a/src/app/pages/learning-page/learning-page.html
+++ b/src/app/pages/learning-page/learning-page.html
@@ -1,1 +1,29 @@
-<p>learning-page works!</p>
+<div class="card">
+  <app-text size="s" weight="regular" color="secondary">Выберите правильный перевод</app-text>
+  <div class="card__img-wrapper">
+    <img class="card__img" 
+      src="/favicon.ico" alt="card-img">
+  </div>
+  <img class="card__icon" src="/assets/images/istockphoto-499680387-612x612.png" alt="card-icon">
+  <app-text size="s" weight="regular" color="secondary">???</app-text>
+  
+  <div class="card__btn-wrapper">
+    <app-button variant="secondary">
+      <app-text size="m" weight="regular" color="warning">???</app-text>
+    </app-button>
+
+    <app-button variant="secondary">
+      <app-text size="m" weight="regular" color="warning">???</app-text>
+    </app-button>
+
+    <app-button variant="secondary">
+      <app-text size="m" weight="regular" color="warning">???</app-text>
+    </app-button>
+  </div>
+
+  <div class="card__btn-end">
+    <app-button variant="primary">
+      <app-text size="m" weight="bold" color="error">Проверить</app-text>
+    </app-button>
+  </div>
+</div>
