--- a/src/app/pages/main-page/main-page.html
+++ b/src/app/pages/main-page/main-page.html
@@ -1,8 +1,4 @@
-<div class="card">
-  <app-button variant="primary">
-    <app-text size="m" weight="bold" color="secondary">Добавить</app-text>
-  </app-button>
-</div>
+<p>app-main-page</p>
 
 
 
