--- a/src/app/components/ui/text/text.html
+++ b/src/app/components/ui/text/text.html
@@ -1,3 +1,3 @@
-<span class="text {{size}} {{color}} {{weight}} {{focusVisible}}">
+<span class="text {{size}} {{color}} {{weight}}">
      <ng-content></ng-content>
 </span>
