--- a/src/app/components/ui/layout/layout.scss
+++ b/src/app/components/ui/layout/layout.scss
@@ -3,6 +3,6 @@
     grid-template-columns: 300px 1fr;
 }
 .pages{
-    background: var(--SecondColor);
+    background: var(--LightColor);
     padding: 20px;
 }
