--- a/src/app/components/ui/text/text.scss
+++ b/src/app/components/ui/text/text.scss
@@ -18,6 +18,10 @@
     font-size: 16px;
 }
 
+.xs {
+    font-size: 12px;
+}
+
 .primary{
     color: var(--PrimaryColor);
 }
@@ -33,6 +37,12 @@
 .error{
     color: var(--ErrColor);
 }
+
+.light{
+    color: var(--LightColor);
+}
+
+
 
 .bold {
     font-weight: 700;
