--- a/src/app/pages/learning-page/learning-page.scss
+++ b/src/app/pages/learning-page/learning-page.scss
@@ -1,31 +1,97 @@
+.cards-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
 .card{
     width: 300px;
     height: 450px;
-    background-color: var(--BgSecondary);
+    background: var(--SecondColor);
+    border-radius: 8px;
     display: block;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 5px;
     position: relative;
+    &__icon-scale{
+        width: 100%;
+        display: flex;
+        gap: 10px;
+        padding-right: 25px;
+    }
+    &__delete-wrapper{
+        width: 20px;
+        position: relative;
+    }
+    &__icon-btn-delete{
+        position: absolute;
+        top: -22%;
+        left: -20%;
+        background: none;
+        border: none;
+        cursor: pointer;
+    }
+    &__scale-wrapper{
+        margin-top: 5px;
+        margin-bottom: 10px;
+        position: relative;
+        width: 100%;
+        height: 15px;
+        border-radius: 10px;
+        overflow: hidden;
+        background: var(--ScaleColor);
+    }
+    &__scale{
+        width: 33.33%;
+        height: 100%;
+        background: var(--BtnPrimaryBg);
+    }
+    &__scale-text{
+        position: absolute;
+        top: -10%;
+        left: 46%;
+    }
     &__img{
-        margin-top: 20px;
-        width: 70px;
-        height: 50px;
+        position: relative;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width: 200px;
+        height: 170px;
+        border-radius: 10px;
     }
     &__icon{
-        width: 26px;
-        height: 26px;
-        margin-bottom: 20px;
+        width: 15px;
+        height: 15px;
+    }
+    &__btn-icon{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 46%;
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+        color: var(--LightColor);
+        background: var(--BtnPrimaryBg);
+        border: none;
+        cursor: pointer;
+        &:hover,
+        :focus-visible{
+            width: 40px;
+            height: 40px;
+            background: var(--PrimaryColor);
+        }
     }
     &__btn-wrapper{
-        margin-top: 20px;
+        margin-top: 10px;
         display: flex;
         flex-direction: column;
         gap: 5px;
     }
     &__btn-end{
         position: absolute;
-        margin-top: 380px;
+        margin-top: 390px;
     }
 }
