--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,4 +1,6 @@
 :root{
+    --ScaleColor: rgba(143, 143, 143, 0.51);
+    --LightColor: #ffffff;
     --BgColor: #1a141f; 
     --BgSecondary: #2e2e2e;
     --PrimaryColor: #13d879; 
