--- a/src/app/components/sidebar/sidebar.scss
+++ b/src/app/components/sidebar/sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar{
-    background: var(--BgSecondary);
-    height: 100dvh;
+    background: var(--BgColor);
+    height: 100%;
     padding: 8px;
     &__logo-img{
         width: 200px;
@@ -8,6 +8,9 @@
     }
     &__list-item{
         padding: 15px;
+
+        
+ 
     }
     &__link{
         display: flex;
@@ -28,4 +31,6 @@
         width: 16px;
         height: 16px;
     }
+
+
 }
