--- a/src/app/components/ui/text/text.scss
+++ b/src/app/components/ui/text/text.scss
@@ -2,6 +2,7 @@
     font-weight: 400;
 }
 
+// size
 .xl {
     font-size: 28px;
 }
@@ -22,6 +23,7 @@
     font-size: 12px;
 }
 
+// color
 .primary{
     color: var(--PrimaryColor);
 }
@@ -42,8 +44,7 @@
     color: var(--LightColor);
 }
 
-
-
+// weight
 .bold {
     font-weight: 700;
 }
