--- a/src/app/pages/learning-page/learning-page.html
+++ b/src/app/pages/learning-page/learning-page.html
@@ -1,53 +1,11 @@
 <div class="cards-container">
-
-    <div class="card">
-        
-        <div class="card__icon-scale">
-            <div class="card__delete-wrapper">
-                <button class="card__icon-btn-delete">
-                    <app-text size="xl" weight="regular" color="light">&times;</app-text>
-                </button>
-            </div>
-            <div class="card__scale-wrapper">
-                <div class="card__scale">
-                    <div class="card__scale-text">
-                        <app-text size="xs" weight="semibold" color="secondary">1/3</app-text>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <app-text size="s" weight="bold" color="primary">Выберите правильный перевод</app-text>
-        <div class="card__img-wrapper">
-            <img class="card__img" 
-            src="/assets/images/11108a3dbfe4636cb40b84b803b2fff62021120618205481912Db4g1a9C4x.png.webp" alt="card-img">
-        </div>
-        <button class="card__btn-icon">
-            <svg class="card__icon"
-                viewBox="0 -1.5 31 31" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="#ffffff" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>volume-full</title> <desc>Created with Sketch Beta.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage"> <g id="Icon-Set-Filled" sketch:type="MSLayerGroup" transform="translate(-258.000000, -571.000000)" fill="#ffffff"> <path d="M277,571.015 L277,573.068 C282.872,574.199 287,578.988 287,585 C287,590.978 283,595.609 277,596.932 L277,598.986 C283.776,597.994 289,592.143 289,585 C289,577.857 283.776,572.006 277,571.015 L277,571.015 Z M272,573 L265,577.667 L265,592.333 L272,597 C273.104,597 274,596.104 274,595 L274,575 C274,573.896 273.104,573 272,573 L272,573 Z M283,585 C283,581.477 280.388,578.59 277,578.101 L277,580.101 C279.282,580.564 281,582.581 281,585 C281,587.419 279.282,589.436 277,589.899 L277,591.899 C280.388,591.41 283,588.523 283,585 L283,585 Z M258,581 L258,589 C258,590.104 258.896,591 260,591 L263,591 L263,579 L260,579 C258.896,579 258,579.896 258,581 L258,581 Z" id="volume-full" sketch:type="MSShapeGroup"> </path> </g> </g> </g>
-            </svg>
-        </button>
-        <app-text size="s" weight="bold" color="primary">learn</app-text>
-
-        <div class="card__btn-wrapper">
-            <app-button variant="primary" size="l">
-                <app-text size="s" weight="regular" color="secondary">нужно</app-text>
-            </app-button>
-
-            <app-button variant="primary" size="l">
-                <app-text size="s" weight="regular" color="secondary">учить</app-text>
-            </app-button>
-
-            <app-button variant="primary" size="l">
-                <app-text size="s" weight="regular" color="secondary">строить</app-text>
-            </app-button>
-        </div>
-
-        <div class="card__btn-end">
-            <app-button variant="primary" size="xl">
-                <app-text size="m" weight="bold" color="secondary">Проверить</app-text>
-            </app-button>
-        </div>
-    </div>
-
+    <app-card (uppCardEventClick)="cardVariantClick($event)"></app-card>
+    <app-card (uppCardEventClick)="cardVariantClick($event)"></app-card>
+    <app-card (uppCardEventClick)="cardVariantClick($event)"></app-card>
+    <app-card (uppCardEventClick)="cardVariantClick($event)"></app-card>
+    <app-card (uppCardEventClick)="cardVariantClick($event)"></app-card>
+    <app-card (uppCardEventClick)="cardVariantClick($event)"></app-card>
 </div>
+
+
+
