Сделал правки по Cards

--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
     <div class="sidebar__logo">
         <img class="sidebar__logo-img" 
-            src="/assets/images/istockphoto-499680387-612x612.png" 
+            [src]="imgLogo" 
             alt="logo image">
     </div>
     <ul class="sidebar__list">
