--- a/src/app/components/layout/layout.html
+++ b/src/app/components/layout/layout.html
@@ -1,7 +1,6 @@
 <div class="layout">
     <app-sidebar></app-sidebar>
-
-    <div class="pages">
+    <div class="learning-page">
         <router-outlet></router-outlet>
     </div>
 </div>
