--- a/src/app/components/layout/layout.scss
+++ b/src/app/components/layout/layout.scss
@@ -2,7 +2,6 @@
     display: grid;
     grid-template-columns: 300px 1fr;
 }
-.pages{
+.learning-page{
     background: var(--LightColor);
-    padding: 20px;
 }
